Squash and Merge fix/white-space

--- a/src/sections/storage-full.scss
+++ b/src/sections/storage-full.scss
@@ -57,7 +57,7 @@
 .storage-full {
   .scrollable-list {
     padding: 4px;
-    max-height: calc(100vh - 410px);
+    max-height: calc(100vh - 280px);
     width: 100%;
   }
 }
